@@ -4,9 +4,9 @@
 
 include ../Makefile.global
 
-SRCS		= mball.c mblang.c mbstat.c mbtoberep.c mbuser.c
-HDRS		= mball.h mbstat.h mbuser.h
-MBALL_OBJS	= mball.o
+SRCS		= mball.c dlcount.c mblang.c mbstat.c mbtoberep.c mbuser.c
+HDRS		= mball.h dlcount.h mbstat.h mbuser.h
+MBALL_OBJS	= mball.o dlcount.o
 MBALL_LIBS	= ../lib/libmbse.a ../lib/libdbase.a
 MBLANG_OBJS	= mblang.o
 MBLANG_LIBS	= ../lib/libmbse.a ../lib/libdbase.a
@@ -84,7 +84,7 @@ depend:
 
 # DO NOT DELETE THIS LINE - MAKE DEPEND RELIES ON IT
 # Dependencies generated by make depend
-mball.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h ../lib/mbsedb.h mball.h
+mball.o: ../config.h ../lib/mbselib.h ../lib/mbse.h ../lib/users.h ../lib/mbsedb.h dlcount.h mball.h
 mblang.o: ../config.h ../lib/mbselib.h
 mbstat.o: ../config.h ../lib/mbselib.h ../lib/users.h ../lib/mbsedb.h mbstat.h
 mbtoberep.o: ../config.h ../lib/mbselib.h
