@@ -1,0 +1,8 @@
+#ifndef	_DLCOUNT_H
+#define	_DLCOUNT_H
+
+/* $Id$ */
+
+void dlcount(void);
+
+#endif
